# plowtech-blog

./: .gitignore  ChangeLog.md  LICENSE  README.md  circle.yml  jenkins.sh  plowtech-blog.cabal  publish.sh  stack.yaml
css/layouts/: blog-old-ie.css  blog.css
highlighting/: README.html  highlight.pack.js
highlighting/styles/: vs.css
posts/: amazonka-ses.md  amazonka-ses.yaml  available-markdown.md  available-markdown.yaml  contravariant-parser.md  contravariant-parser.yaml  eitherT-and-fail.md  eitherT-and-fail.yaml  ffi-tutorial-part-1.md  ffi-tutorial-part-1.yaml  ffi-tutorial-part-2.md  ffi-tutorial-part-2.yaml  groundhog-tutorial.md  groundhog-tutorial.yaml  herf-time.md  herf-time.yaml  mikrotik-wds.md  mikrotik-wds.yaml  modicon-prime.md  modicon-prime.yaml  test-post-2.md  test-post-2.yaml  test-post-3.md  test-post-3.yaml  test-post-4.yaml  test-post-5.yaml  test-post-6.yaml  test-post.yaml  thanks-kevin.md  thanks-kevin.yaml  types-as-unit-tests.md  types-as-unit-tests.yaml
src/: Main.hs  Plowtech.hs
src/Plowtech/: Internal.hs
templates/: description.html  index.html  post.html
test/: PlowtechSpec.hs
