Name:                   plowtech-blog
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plowtech
  Other-Modules:        Plowtech.Internal
  Build-Depends:        base >= 4 && < 5

executable plowtech-blog-exec
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , plowtech-blog
                      , hakyll == 4.6.9.0
                      , pandoc == 1.13.2.1
                      , yaml == 0.8.11
                      , time == 1.4.2
                      , aeson
                      , text == 1.2.0.6
                      , mtl
                      , bytestring == 0.10.4.0
                      , binary == 0.7.1.0
                      , filepath == 1.3.0.2
                      , directory == 1.2.1.0

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
