
Name:                   plowtech-blog
Version:                0.0.2
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Plowtech
  Other-Modules:        Plowtech.Internal
  Build-Depends:        base >= 4 && < 5
                      , containers
                      , monads-tf

executable plowtech-blog-exec
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Build-Depends:        aeson
                      , base >= 4 && < 5
                      , binary
                      , bytestring
                      , containers 
                      , directory
                      , filepath
                      , hakyll
                      , mtl
                      , pandoc
                      , plowtech-blog
                      , text
                      , time
                      , yaml

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , containers
                      , hspec
                      , monads-tf >= 0.1.0.2

Source-Repository head
  Type:                 git
--  Location:             
